# edPerm

./: .gitignore  README.md  alteracoes no arquivo py de banco  db1.db  db_create.py  geradordeqrcode.py  pref.py  script.sh  test.py  turma.sql
Flask/: alembic.ini  app.py  pessoas.py  pyproject.toml  send.py
Flask/BD/: db1.db  session.py  turma.sql
Flask/BD/model/: Turma.py  (+3 more)
Flask/controller/: .endpoints.py.swp  endpoints.py
Flask/database/: db_create.py  session.py
Flask/relatorios/: relatorioAtividades.py  relatorio_contato.py  relatorio_cpfnome.py
Flask/services/: AdicionarPublicoService.py  AtualizarUserService.py  AutheticateUserService.py  CadastrarAlunoService.py  CreateAlunoService.py  CreateApoiadorService.py  CreateAulaService.py  CreateComplementoService.py  CreateHorarioService.py  CreatePresencaService.py  CreateTurmaService.py  CreateUserService.py  DeleteAlunoService.py  DeleteApoiadorService.py  ListAulaPresencaService.py  ListAulaService.py  ListPresencaTotalService.py  ListTurmaAlunoService.py  ListTurmaApoiadorService.py  ListTurmaPorPublicoService.py  ListTurmaPropositorService.py  ListTurmaPublicoAlvoService.py  ListTurmaService.py  ListUserService.py  TransformarEmAdmService.py  TransformarEmApoiadorService.py  TransformarEmCoordenadorService.py  TransformarEmGestorService.py  TransformarEmPropositorService.py  makeValidacaoService.py
Flask/templates/: atualizarpresencaaluno.html  cadastro.html  cadastroalunonaturma.html  cadastroapoiador.html  cadastrodadospessoais.html  inicio.html  listaralunosdaturma.html  listaturma.html  login.html
(+184 files in other folders)
