[tool.poetry]
name = "edpermanente"
version = "0.1.0"
description = ""
authors = ["LabNet"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask_cors = "^3.0.8"
qrcode = "^6.1"
sqlalchemy = "^1.3.17"
flask_jwt_extended = "^3.24.1"
pymysql = "^0.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
